[8u] incorrect include file name in semaphore.inline.hpp

XMLWordPrintable

    • 8
    • b02
    • generic
    • generic

        In https://github.com/openjdk/jdk8u-dev/blame/master/hotspot/src/share/vm/runtime/semaphore.inline.hpp#L28, '#include "runtime/interfaceSupport.inline.hpp"' include incorrect file name. The file doesn't exist. The correct name should be interfaceSupport.hpp

              Assignee:
              Sendao Yan
              Reporter:
              Sendao Yan
              Votes:
              0 Vote for this issue
              Watchers:
              5 Start watching this issue

                Created:
                Updated:
                Resolved: