8335978: [8u] incorrect include file name in semaphore.inline.hpp

Reviewed-by: phh